@@ -1,7 +1,7 @@
 #!/usr/bin/env python
 
 from agate.analysis import *
-from agate.aggregators import *
+from agate.aggregations import *
 from agate.columns import *
 from agate.column_types import *
 from agate.computations import *
