@@ -1,6 +1,7 @@
 0.6.0
 -----
 
+* Rename agate.aggegators to agate.aggregations.
 * TableSet.to_csv implemented. (#195)
 * TableSet.from_csv implemented. (#194)
 * Table.to_csv implemented (#169)
